# acamethics

./: CMakeLists.txt  Dockerfile  GGUF.md  README.md  README.txt  fineTuneSLM.cpp  fineTuneSLM.py  genQA.cpp  genQA.py  querySLM.cpp  querySLM.py  requirements.txt
